--- a/uuid-generator.html
+++ b/uuid-generator.html
@@ -86,6 +86,10 @@ tbody#rows .actions .pill {
 }
 
   </style>
+  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7167291111213614"
+     crossorigin="anonymous"></script>
+	 
 </head>
 
 <body>
