--- a/puzzle.html
+++ b/puzzle.html
@@ -219,6 +219,10 @@
     }
   })();
   </script>
+  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7167291111213614"
+     crossorigin="anonymous"></script> 
+	 
 </head>
 
 <body>
