--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@ loadPartials();
                  <li>
                   <a href="/roguelike.html">Top-Down Roguelike</a> — procedural dungeon runs with permadeath-style resets.
                 </li>
+                <li>
+                  <a href="/galactica.html">Galactica</a> — classic fixed shooter with upgrades, missiles, auto-fire, 3-hit health, and 51 levels (0–50).
+                 </li>
 
                </ul>
 
