--- a/csp-analyzer.html
+++ b/csp-analyzer.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
 
-
+  <!-- Start cookieyes banner --> 
+   <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script> 
+  <!-- End cookieyes banner -->
+  
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-S8X8VY5J5E"></script>
 <script>
