--- a/csp-analyzer.html
+++ b/csp-analyzer.html
@@ -3,7 +3,7 @@
 <head>
 
   <!-- Start cookieyes banner --> 
-   <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script> 
+   <script id="cookieyes" async type="text/javascript" src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script> 
   <!-- End cookieyes banner -->
   
 <!-- Google tag (gtag.js) -->
