web crawler  classification help
<script type="application/ld+json">
{
  "@context": "https://schema.org",
  "@type": "WebSite",
  "name": "SureWhyNot Dev Studio",
  "url": "https://surewhynot.app/",
  "description": "Browser-based developer and security tools. Local-first utilities for builders.",
  "publisher": {
    "@type": "Person",
    "name": "Ced"
  }
}
</script>

--- a/index.html
+++ b/index.html
@@ -28,7 +28,22 @@
   <meta property="og:title" content="SureWhyNot — Developer Tools & Security Utilities" />
   <meta property="og:description" content="Local-first tools for builders: JSON, JWT, CSP, hashes, UUIDs — plus mini games. No accounts. No uploads." />
   <meta property="og:url" content="https://surewhynot.app/" />
-
+   
+   <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "SureWhyNot Dev Studio",
+  "url": "https://surewhynot.app/",
+  "description": "Browser-based developer and security tools. Local-first utilities for builders.",
+  "publisher": {
+    "@type": "Person",
+    "name": "Ced"
+  }
+}
+</script>
+ 
+   
   <link rel="stylesheet" href="/assets/site.css">
 
   <!-- AdSense -->
