--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,17 @@
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
+   
+   <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ContactPage",
+  "name": "Contact SureWhyNot Dev Studio",
+  "url": "https://surewhynot.app/contact.html"
+}
+</script>
+
+   
 </head>
 
 <body>
