--- a/about.html
+++ b/about.html
@@ -31,6 +31,16 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
 	 
+   <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "AboutPage",
+  "name": "About SureWhyNot Dev Studio",
+  "url": "https://surewhynot.app/about.html"
+}
+</script>
+	 
+	 
 </head>
 
 <body>
