galactica web crawler update
<script type="application/ld+json">
{
  "@context": "https://schema.org",
  "@type": "Game",
  "name": "Galactica",
  "url": "https://surewhynot.app/galactica.html",
  "operatingSystem": "Any",
  "creator": {
    "@type": "Person",
    "name": "Ced"
  }
}
</script>

--- a/galactica.html
+++ b/galactica.html
@@ -80,7 +80,21 @@
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
-  
+   
+   <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Game",
+  "name": "Galactica",
+  "url": "https://surewhynot.app/galactica.html",
+  "operatingSystem": "Any",
+  "creator": {
+    "@type": "Person",
+    "name": "Ced"
+  }
+}
+</script>
+   
 </head>
 
 <body>
