tip jar web crawler help
<script type="application/ld+json">
{
  "@context": "https://schema.org",
  "@type": "WebPage",
  "name": "Fuel The Infrastructure",
  "url": "https://surewhynot.app/infrastructure.html",
  "description": "Support and infrastructure information for SureWhyNot Dev Studio."
}
</script>

--- a/infrastructure.html
+++ b/infrastructure.html
@@ -98,6 +98,18 @@
       min-width:90px;
     }
   </style>
+  
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Fuel The Infrastructure",
+  "url": "https://surewhynot.app/infrastructure.html",
+  "description": "Support and infrastructure information for SureWhyNot Dev Studio."
+}
+</script>
+
+  
 </head>
 
 <body onload="loadPartials()">
