--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
 
     <main>
       <div class="wrap">
+	  
+	  <h1 style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden;">
+          JSON Formatter, JWT Decoder & Security Tools
+      </h1>
+
+	  <div class="h1">JSON Formatter, JWT Decoder & Security Tools</div>
+
+       <div class="h2">Browser-Based Developer Utilities</div>
+       <div class="h2">Local-First Privacy</div>
+       <div class="h2">Available Tools</div>
+
+	  
         <section class="grid">
 
           <!-- LEFT: Welcome (no duplicate nav, no policy links) -->
