index SEO update

--- a/index.html
+++ b/index.html
@@ -66,15 +66,14 @@
 	  
 	  <h1 style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden;">
           JSON Formatter, JWT Decoder & Security Tools
-      </h1>
+      </h1>  
 
-	  <div class="h1">JSON Formatter, JWT Decoder & Security Tools</div>
+     <div class="h1">SureWhyNot — Dev Studio</div>
 
-       <div class="h2">Browser-Based Developer Utilities</div>
-       <div class="h2">Local-First Privacy</div>
-       <div class="h2">Available Tools</div>
-
-	  
+     <p class="muted" style="margin:6px 0 18px; max-width: 70ch;">
+        A small suite of browser tools for parsing, transforming, and inspecting developer data.
+     </p>
+       	  
         <section class="grid">
 
           <!-- LEFT: Welcome (no duplicate nav, no policy links) -->
