index SEO overhaul

--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
 
   <!-- Start cookieyes banner --> 
-   <script id="cookieyes" async type="text/javascript" src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script> 
+  <script id="cookieyes" async type="text/javascript" src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script> 
   <!-- End cookieyes banner -->
   
- <!-- Google tag (gtag.js) -->
- <script async src="https://www.googletagmanager.com/gtag/js?id=G-S8X8VY5J5E"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S8X8VY5J5E"></script>
   <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-S8X8VY5J5E');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-S8X8VY5J5E');
   </script>
 
   <meta charset="utf-8" />
@@ -28,22 +27,21 @@
   <meta property="og:title" content="SureWhyNot — Developer Tools & Security Utilities" />
   <meta property="og:description" content="Local-first tools for builders: JSON, JWT, CSP, hashes, UUIDs — plus mini games. No accounts. No uploads." />
   <meta property="og:url" content="https://surewhynot.app/" />
-   
-   <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebSite",
-  "name": "SureWhyNot Dev Studio",
-  "url": "https://surewhynot.app/",
-  "description": "Browser-based developer and security tools. Local-first utilities for builders.",
-  "publisher": {
-    "@type": "Person",
-    "name": "Ced"
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "SureWhyNot Dev Studio",
+    "url": "https://surewhynot.app/",
+    "description": "Browser-based developer and security tools. Local-first utilities for builders.",
+    "publisher": {
+      "@type": "Person",
+      "name": "Ced"
+    }
   }
-}
-</script>
- 
-   
+  </script>
+
   <link rel="stylesheet" href="/assets/site.css">
 
   <!-- AdSense -->
@@ -63,56 +61,59 @@
 
     <main>
       <div class="wrap">
-	  
-	  <h1 style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden;">
-          JSON Formatter, JWT Decoder & Security Tools
-      </h1>  
-	  
-     <div class="h1">SureWhyNot — Dev Studio</div>
 
-     <p class="muted" style="margin:6px 0 18px; max-width: 70ch;">
-        A small suite of browser tools for parsing, transforming, and inspecting developer data.
-     </p>
-       	  
+        <!-- SEO-correct heading structure -->
+        <h1 class="h1">SureWhyNot — Dev Studio</h1>
+
+        <h2 class="h2" style="margin:6px 0 12px;">
+          Developer &amp; Security Tools for IT Professionals
+        </h2>
+
+        <p class="muted" style="margin:0 0 22px; max-width:70ch;">
+          SureWhyNot provides fast, browser-based utilities for working with structured data, authentication tokens,
+          security policies, and developer workflows. Tools run directly in your browser with no accounts and no server-side
+          storage. Designed for engineers who need clean, reliable utilities without friction.
+        </p>
+
         <section class="grid">
 
-          <!-- LEFT: Welcome (no duplicate nav, no policy links) -->
+          <!-- LEFT -->
           <div class="card">
             <div class="pad">
-              <div class="h1">Welcome</div>
+
+              <h2 class="h2">Welcome</h2>
 
               <p class="muted" style="margin-top:6px">
-               Local-first tools for builders. Fast. Private. No accounts. No uploads.<br>
-               Built for real work — paste your data, get what you need, move on.<br>
-               Everything runs in your browser.
+                Local-first tools for builders. Fast. Private. No accounts. No uploads.<br>
+                Built for real work — paste your data, get what you need, move on.<br>
+                Everything runs in your browser.
               </p>
-			  
-			  <div style="height:18px"></div>
-<hr style="opacity:.15">
-<div style="height:14px"></div>
 
-<div class="h2" style="font-size:14px; letter-spacing:.08em; opacity:.8;">
-  Take a Break
-</div>
+              <div style="height:18px"></div>
+              <hr style="opacity:.15">
+              <div style="height:14px"></div>
 
-<p class="muted" style="font-size:12px; margin-top:6px; opacity:.7;">
-  Two lightweight browser games built in-house.
-</p>
+              <h2 class="h2" style="font-size:14px; letter-spacing:.08em; opacity:.8;">
+                Take a Break
+              </h2>
 
-<div style="display:flex; flex-direction:column; gap:8px; margin-top:10px; max-width:180px;">
-  <a class="pill" href="/galactica.html">Galactica</a>
-  <a class="pill" href="/roguelike.html">Roguelike</a>
-</div>
+              <p class="muted" style="font-size:12px; margin-top:6px; opacity:.7;">
+                Two lightweight browser games built in-house.
+              </p>
 
+              <div style="display:flex; flex-direction:column; gap:8px; margin-top:10px; max-width:180px;">
+                <a class="pill" href="/galactica.html">Galactica</a>
+                <a class="pill" href="/roguelike.html">Roguelike</a>
+              </div>
 
             </div>
           </div>
 
-          <!-- RIGHT: Updates + Coming Next -->
+          <!-- RIGHT -->
           <div class="card">
             <div class="pad">
 
-              <div class="h2">Latest updates</div>
+              <h2 class="h2">Latest updates</h2>
               <ul class="list" style="margin-top:10px; line-height:1.65">
                 <li>JWT Decoder: header/payload decoding + exp/iat/nbf checks + export</li>
                 <li>CSP Analyzer: severity findings + report download (.txt/.json)</li>
@@ -120,9 +121,9 @@
 
               <div style="height:14px"></div>
               <hr>
-
               <div style="height:14px"></div>
-              <div class="h2">What’s coming next</div>
+
+              <h2 class="h2">What’s coming next</h2>
               <ul class="list" style="margin-top:10px; line-height:1.65">
                 <li>User-requested: Regex Playground</li>
                 <li>In progress: Secure Paste (client-side, self-destructing)</li>
@@ -137,13 +138,12 @@
 
     <div id="site-footer"></div>
   </div>
-  
+
   <script>
   async function loadPartials() {
     const [header, footer] = await Promise.all([
       fetch('/partials/header'),
       fetch('/partials/footer')
-
     ]);
 
     const h = document.getElementById('site-header');
@@ -155,8 +155,7 @@
     if (window.SWY_renderToolUse) window.SWY_renderToolUse();
   }
   loadPartials();
-</script>
+  </script>
 
-  
 </body>
 </html>
