--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 
     <main>
       <div class="wrap">
+	  
+	   <h1 class="h1">SureWhyNot — Dev Studio</h1>
+       <h2 class="h2" style="margin:6px 0 18px;">Browser-Based Developer &amp; Security Tools</h2>
+
        
 
         <section class="grid">
@@ -69,7 +73,7 @@
           <div class="card">
             <div class="pad">
 
-              <h2 class="h2">Welcome</h2>
+              <h3 class="h2">Welcome</h3>
 
               <p class="muted" style="margin-top:6px">
                 Local-first tools for builders. Fast. Private. No accounts. No uploads.<br>
