--- a/infrastructure.html
+++ b/infrastructure.html
@@ -119,10 +119,15 @@
 
     <main>
       <div class="wrap wrapCenter">
+	  <h1 class="h1">Infrastructure &amp; Security Overview</h1>
+      <h2 class="h2" style="margin:6px 0 18px;">
+          Architecture, Hosting, and Privacy Model
+      </h2>
+
         <div class="card cardCentered">
           <div class="pad" style="text-align:center">
 
-            <div class="h1">Fuel the Infrastructure</div>
+            <h3 class="h2">Fuel the Infrastructure</h3>
 
             <div class="muted" style="margin-top:8px; line-height:1.6">
               This lab runs on time, bandwidth, and caffeine.<br>
