--- a/index.html
+++ b/index.html
@@ -1,20 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-
-  <!-- Start cookieyes banner --> 
-  <script id="cookieyes" async type="text/javascript" src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script> 
-  <!-- End cookieyes banner -->
-  
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S8X8VY5J5E"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-S8X8VY5J5E');
-  </script>
-
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -44,7 +30,7 @@
 
   <link rel="stylesheet" href="/assets/site.css">
 
-  <!-- AdSense -->
+  <!-- AdSense (kept async; OK in head) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7167291111213614"
     crossorigin="anonymous"></script>
 
@@ -61,8 +47,8 @@
 
     <main>
       <div class="wrap">
-	  
-	        <section class="grid">
+
+        <section class="grid">
 
           <!-- LEFT -->
           <div class="card">
@@ -126,38 +112,61 @@
     <div id="site-footer"></div>
   </div>
 
+  <!-- Partials + homepage-only H1/H2 conversion -->
   <script>
-  function swapTag(el, newTag) {
-    if (!el) return;
-    const ne = document.createElement(newTag);
-    for (const attr of el.attributes) ne.setAttribute(attr.name, attr.value);
-    ne.innerHTML = el.innerHTML;
-    ne.style.margin = "0";
-    el.replaceWith(ne);
-  }
+    function swapTag(el, newTag) {
+      if (!el) return;
+      const ne = document.createElement(newTag);
+      for (const attr of el.attributes) ne.setAttribute(attr.name, attr.value);
+      ne.innerHTML = el.innerHTML;
+      ne.style.margin = "0";
+      el.replaceWith(ne);
+    }
 
-  async function loadPartials() {
-    const [header, footer] = await Promise.all([
-      fetch('/partials/header'),
-      fetch('/partials/footer')
-    ]);
+    async function loadPartials() {
+      const [header, footer] = await Promise.all([
+        fetch('/partials/header'),
+        fetch('/partials/footer')
+      ]);
 
-    const h = document.getElementById('site-header');
-    const f = document.getElementById('site-footer');
+      const h = document.getElementById('site-header');
+      const f = document.getElementById('site-footer');
 
-    if (h) h.innerHTML = await header.text();
-    if (f) f.innerHTML = await footer.text();
+      if (h) h.innerHTML = await header.text();
+      if (f) f.innerHTML = await footer.text();
 
-    // Convert header title/subtitle to H1/H2 on homepage only
-    swapTag(document.querySelector("header .brand"), "h1");
-    swapTag(document.querySelector("header .subtitle"), "h2");
+      // Homepage: convert existing header title/subtitle to real H1/H2
+      swapTag(document.querySelector("header .brand"), "h1");
+      swapTag(document.querySelector("header .subtitle"), "h2");
 
-    if (window.SWY_renderToolUse) window.SWY_renderToolUse();
-  }
+      if (window.SWY_renderToolUse) window.SWY_renderToolUse();
+    }
 
-  loadPartials();
-</script>
+    loadPartials();
+  </script>
 
+  <!-- CookieYes (moved to bottom) -->
+  <script id="cookieyes" async type="text/javascript"
+    src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script>
+
+  <!-- Google Analytics (moved to bottom + delayed) -->
+  <script>
+    window.addEventListener("load", function () {
+      setTimeout(function () {
+        var s = document.createElement("script");
+        s.async = true;
+        s.src = "https://www.googletagmanager.com/gtag/js?id=G-S8X8VY5J5E";
+        document.head.appendChild(s);
+
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        window.gtag = gtag;
+
+        gtag('js', new Date());
+        gtag('config', 'G-S8X8VY5J5E');
+      }, 2000);
+    });
+  </script>
 
 </body>
 </html>
