--- a/infrastructure.html
+++ b/infrastructure.html
@@ -18,7 +18,7 @@
 
   <script>
     async function loadPartials() {
-      const header = await fetch('/partials/header.html');
+      const header = await fetch('/partials/header');
       const footer = await fetch('/partials/footer.html');
 
       document.getElementById('site-header').innerHTML = await header.text();
