--- a/infrastructure.html
+++ b/infrastructure.html
@@ -95,7 +95,6 @@
 }
 </script>
 
-  
 </head>
 
 <body onload="loadPartials()">
@@ -108,14 +107,22 @@
         <div class="card cardCentered">
           <div class="pad" style="text-align:center">
 
-            <div class="h1">Fuel the Infrastructure</div>
+            <h1 class="h1">Support the Infrastructure Behind SureWhyNot</h1>
 
-            <div class="muted" style="margin-top:8px; line-height:1.6">
-              This lab runs on time, bandwidth, and caffeine.<br>
-              If it’s useful, help keep it online.
-            </div>
+            <h2 class="muted" style="margin-top:8px; line-height:1.6; font-weight:normal;">
+              This developer lab runs on time, bandwidth, and caffeine.<br>
+              If these free browser-based security and IT tools are useful to you,<br>
+              consider helping keep the infrastructure online.
+            </h2>
 
             <div class="hr"></div>
+
+            <p class="muted" style="font-size:12px; opacity:.7; margin-top:10px;">
+              Your support helps maintain hosting, bandwidth, development time, and ongoing improvements to SureWhyNot’s
+              JSON, JWT, CSP, hashing, and other browser-based utilities.
+            </p>
+
+            <div style="height:10px"></div>
 
             <div class="muted" style="margin-bottom:10px; font-size:13px; letter-spacing:.5px;">
               Links
