galactica SEO update

--- a/galactica.html
+++ b/galactica.html
@@ -32,6 +32,10 @@
     .card{
       border:1px solid #1f2630; background:#0f1620; border-radius:14px; padding:14px;
       box-shadow:0 10px 30px rgba(0,0,0,.35);
+	  
+	  <h1>Galactica – Free Online Space Shooter Game (51 Levels)</h1>
+      <h2>Play Galactica: Upgrades, Missiles, Auto-Fire & Score Tracking</h2>
+	  
     }
     canvas{ width:100%; height:auto; display:block; border-radius:12px; border:1px solid #1f2630; background:#070a0e; }
     .hud{ display:flex; justify-content:space-between; gap:12px; margin-top:8px; font-size:12px; opacity:.9; flex-wrap:wrap; align-items:center; }
@@ -99,8 +103,12 @@
   </header>
 
   <div class="card">
-    <div style="position:relative;">
-      <canvas id="game" width="900" height="540"></canvas>
+
+  <h1 class="seo-h1">Galactica – Free Online Space Shooter Game (51 Levels)</h1>
+  <h2 class="seo-h2">Play Galactica: Upgrades, Missiles, Auto-Fire & Score Tracking</h2>
+
+  <div style="position:relative;">
+    <canvas id="game" width="900" height="540"></canvas>
 
       <div id="overlay" class="overlay">
         <div class="panel">
