styling bypass defualt
<h1 style="margin:0;font-weight:700;font-size:14px;">Galactica</h1>
<h2 class="muted" style="margin:0;font-size:12px;font-weight:normal;">
  Move: ← → / A D • Missile: Space • Toggle Auto-fire: F • Restart: R • Level: N/P • Touch: drag ship
</h2>
<p class="muted" style="margin:2px 0 0 0;font-size:12px;max-width:760px;">
  Classic fixed shooter with 51 levels (0–50), upgrades, missiles, auto-fire, score/time/kills, and 3-hit ship health.
</p>

--- a/galactica.html
+++ b/galactica.html
@@ -88,10 +88,13 @@
 <div class="wrap">
   <header>
     <div class="row">
-      <div><b>Galactica</b></div>
-      <span class="muted" style="font-size:12px;">
-        Move: ← → / A D • Missile: Space • Toggle Auto-fire: F • Restart: R • Level: N/P • Touch: drag ship
-      </span>
+      <h1 style="margin:0;font-weight:700;font-size:14px;">Galactica</h1>
+<h2 class="muted" style="margin:0;font-size:12px;font-weight:normal;">
+  Move: ← → / A D • Missile: Space • Toggle Auto-fire: F • Restart: R • Level: N/P • Touch: drag ship
+</h2>
+<p class="muted" style="margin:2px 0 0 0;font-size:12px;max-width:760px;">
+  Classic fixed shooter with 51 levels (0–50), upgrades, missiles, auto-fire, score/time/kills, and 3-hit ship health.
+</p>
     </div>
 
     <div class="row">
