--- a/about.html
+++ b/about.html
@@ -5,6 +5,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About — SureWhyNot</title>
+
+  <!-- SEO -->
+  <meta name="description" content="About SureWhyNot: an independent web studio building fast, lightweight browser tools and small interactive games. Local-first design. No accounts required." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://surewhynot.app/about.html" />
+
+  <meta property="og:title" content="About — SureWhyNot" />
+  <meta property="og:description" content="Independent web studio focused on fast browser tools, lightweight games, and privacy-first design." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://surewhynot.app/about.html" />
+
   <link rel="stylesheet" href="/assets/site.css">
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7167291111213614"
@@ -16,15 +27,15 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
 	 
-   <script type="application/ld+json">
+  <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "AboutPage",
   "name": "About SureWhyNot Dev Studio",
-  "url": "https://surewhynot.app/about.html"
+  "url": "https://surewhynot.app/about.html",
+  "description": "Independent web studio building fast browser tools and lightweight games with privacy-first principles."
 }
 </script>
-	 
 	 
 </head>
 
@@ -33,13 +44,17 @@
    
    <div id="site-header"></div>
 
-
     <main>
       <div class="wrap">
         <section class="grid" style="grid-template-columns:1fr;">
           <div class="card">
             <div class="pad">
-              <div class="h1">About</div>
+
+              <h1 class="h1" style="margin:0;">About</h1>
+              <h2 class="muted" style="margin:2px 0 0 0;font-size:12px;font-weight:normal;">
+                Fast tools. Lightweight games. Local-first design.
+              </h2>
+
               <div class="muted">
 
                 SureWhyNot is an independent web studio focused on building fast, lightweight browser tools and small interactive games.
