contact SEO update

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — SureWhyNot</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Contact SureWhyNot. Send bug reports, technical issues, improvement suggestions, tool requests, general questions, or privacy inquiries to the right inbox." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://surewhynot.app/contact.html" />
+
+  <meta property="og:title" content="Contact — SureWhyNot" />
+  <meta property="og:description" content="Send bug reports, technical issues, suggestions, tool requests, general questions, or privacy inquiries." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://surewhynot.app/contact.html" />
+
   <link rel="stylesheet" href="/assets/site.css">
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7167291111213614"
@@ -16,16 +27,16 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
    
-   <script type="application/ld+json">
+  <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "ContactPage",
   "name": "Contact SureWhyNot Dev Studio",
-  "url": "https://surewhynot.app/contact.html"
+  "url": "https://surewhynot.app/contact.html",
+  "description": "Contact SureWhyNot via email routing for bugs, technical issues, suggestions, tool requests, and privacy inquiries."
 }
 </script>
 
-   
 </head>
 
 <body>
@@ -38,7 +49,11 @@
 <div class="card">
 <div class="pad">
 
-<div class="h1">Contact</div>
+<h1 class="h1" style="margin:0;">Contact</h1>
+<h2 class="muted" style="margin:2px 0 0 0;font-size:12px;font-weight:normal;">
+Send bug reports, requests, or privacy questions to the right inbox.
+</h2>
+
 <div class="muted" style="margin-bottom:12px;">
 Use the form below to send a message to the right inbox.
 </div>
