privacy SEO update

--- a/privacy.html
+++ b/privacy.html
@@ -5,6 +5,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Privacy — SureWhyNot</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Privacy Policy for SureWhyNot. Learn how data is handled, local storage usage, advertising policies, and analytics practices." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://surewhynot.app/privacy.html" />
+
+  <meta property="og:title" content="Privacy — SureWhyNot" />
+  <meta property="og:description" content="Privacy policy outlining data handling, local storage, analytics, and advertising practices." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://surewhynot.app/privacy.html" />
+
   <link rel="stylesheet" href="/assets/site.css">
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7167291111213614"
@@ -15,7 +26,17 @@
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">	 
- 	 
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "PrivacyPolicy",
+  "name": "Privacy Policy — SureWhyNot",
+  "url": "https://surewhynot.app/privacy.html",
+  "description": "Privacy policy describing data handling, local storage, analytics, and advertising practices."
+}
+</script>
+	 
 </head>
 
 <body>
@@ -23,13 +44,17 @@
     
 	<div id="site-header"></div>
 
-
     <main>
       <div class="wrap">
         <section class="grid" style="grid-template-columns:1fr;">
           <div class="card">
             <div class="pad">
-              <div class="h1">Privacy</div>
+
+              <h1 class="h1" style="margin:0;">Privacy</h1>
+              <h2 class="muted" style="margin:2px 0 0 0;font-size:12px;font-weight:normal;">
+                Data handling, local storage, analytics, and advertising policies.
+              </h2>
+
               <div class="muted">
 
                 SureWhyNot is designed to operate with minimal data collection.
